--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,62 @@
 body {
-    max-width: 500px;
-    margin: auto;
+    background-color: rgb(243, 128, 212);
 }
 
 #GengarG {
-
-    height: 700PX;
-    width: 600PX;
+    height: 100PX;
+    width: 100PX;
     margin: AUTO;
 }
 
-#button {
-    background-color: aqua;
-    border: none;
-    color: white;
-    padding: 15px 32px;
+nav{
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-links{
+    flex: 1;
+    text-align: right;
+}
+
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-links ul li a{
+    color: #fff;
+    text-decoration: none;
+}
+
+nav img{
+    width: 150px;
+}
+
+.text-box{
+    width: 90%;
+    color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     text-align: center;
-    font-size: 16px;
 }
 
-.hidden{
-    display: none;
+.text-box h1{
+    font-size: 62px;
 }
 
+.hero-btn{
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+}
