--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,20 @@ nav img {
   width: 150px;
 }
 
+.nav-toggle{
+  display: none;
+  cursor: pointer;
+}
+
+.nav-toggle span{
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 5px;
+}
+
+
 .text-box {
   width: 90%;
   color: black;
@@ -107,3 +121,19 @@ nav img {
 .card img {
   border-radius: 5px 5px 0 0;
 }
+
+@media screen and (max-width: 1500px){
+  .nav-links{
+    display: none;
+  }
+
+  .nav-toggle{
+    display: block;
+  }
+
+  .nav-links.active{
+    display: block;
+  }
+ 
+}
+
